--- a/pj260220/index.html
+++ b/pj260220/index.html
@@ -21,6 +21,18 @@
       "
     ></div>
 
+    <form id="myForm" onsubmit="return validateForm();">
+      <label for="name">Имя:</label>
+      <input type="text" id="name" name="name" />
+      <span id="nameError" class="error"></span>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" />
+      <span id="emailError" class="error"></span>
+
+      <button type="submit">Отправить</button>
+    </form>
+
     <script>
       function updateColor() {
         // Get the value from the input field
@@ -31,6 +43,7 @@
         document.getElementById("colorFux").style.backgroundColor = huyex;
       }
     </script>
+    <script src="valya.js"></script>
   </body>
 </html>
 
